# ros2-vision-pick-and-place

./: July 2026 IK.txt  Object_Detection_With_Pi.ino  README.md
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/install/: local_setup.sh  setup.sh
my_cpp_pkg/log/: latest_build
my_cpp_pkg/src/: camera_node.py  color_detector_node.py  ik_node.cpp  ik_node.py  serial_sender.cpp  serial_sender.py
